<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.TextLabel"
            android:layout_marginBottom="15dp">
            <EditText
                android:id="@+id/input_hooral_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullname_hooral"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.TextLabel"
            android:layout_marginBottom="15dp">
            <EditText
                android:id="@+id/input_hooral_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthdate_hooral"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.TextLabel"
            android:layout_marginBottom="15dp">
            <EditText
                android:id="@+id/input_hooral_sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sum_hooral"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/button_hooral_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Button"
            android:text="@string/complete_order_hooral"
            android:layout_gravity="center"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>