<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        android:elevation="1dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp
            ">
            <TextView
                android:id="@+id/text_hooral_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textSize="16dp"
                android:textColor="@color/primary_text"
                android:text="@string/test_short"/>
            <TextView
                android:id="@+id/text_hooral_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="14dp"
                android:text="12:00"
                android:textStyle="bold"
                android:textColor="@color/primary_text"/>
            <org.sufficientlysecure.htmltextview.HtmlTextView
                android:id="@+id/text_hooral_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textSize="14dp"
                android:textColor="@color/secondary_text"
                android:text="@string/test_normal"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:text="@string/order_hooral"
                android:textColor="@color/accent"
                style="?android:attr/borderlessButtonStyle" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>